docs: strengthen cache consistency, ZGC, Java 17/21 and data migration content